examples/anyhow_output.run.stderr
Error: error: "kaboom"
 --> examples/anyhow_output.rs:4:9
  |
4 |     Err(Spanned::here("kaboom"))?;
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
